[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/medium_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/Main.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/Moon.png" type="Texture" id=5]
[ext_resource path="res://assets/background_menu.png" type="Texture" id=6]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="background_menu" type="Sprite" parent="."]
position = Vector2( 288, 664 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="Moon" type="Sprite" parent="."]
position = Vector2( 288, 80 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Credits" type="Control" parent="."]
visible = false
margin_right = 576.0
margin_bottom = 1024.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
margin_top = 24.0
margin_right = 568.0
margin_bottom = 1024.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Credits/VBoxContainer"]
margin_right = 568.0
margin_bottom = 60.0

[node name="Back" type="Button" parent="Credits/VBoxContainer/CenterContainer"]
margin_left = 126.0
margin_right = 441.02
margin_bottom = 60.0
text = "Back"

[node name="CenterContainer2" type="CenterContainer" parent="Credits/VBoxContainer"]
margin_top = 80.0
margin_right = 568.0
margin_bottom = 1000.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/VBoxContainer/CenterContainer2"]
margin_left = 107.0
margin_top = 71.0
margin_right = 460.0
margin_bottom = 849.0
custom_constants/separation = 40

[node name="ForDarth" type="Label" parent="Credits/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 353.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 3 )
text = "For Darth !"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Credits/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 140.0
margin_right = 353.0
margin_bottom = 389.0

[node name="Label" type="Label" parent="Credits/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 249.0
text = "Graphics
Design
Code
Sounds"

[node name="Label2" type="Label" parent="Credits/VBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer"]
margin_left = 164.0
margin_top = 94.0
margin_right = 353.0
margin_bottom = 154.0
text = "by Geegaz"

[node name="Label" type="Label" parent="Credits/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 429.0
margin_right = 353.0
margin_bottom = 552.0
text = "Additional sounds
by Freesound"
align = 1

[node name="Label2" type="Label" parent="Credits/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 592.0
margin_right = 353.0
margin_bottom = 778.0
text = "Music
\"Drowning in Air\"
by Ketsa"
align = 1

[node name="Menu" type="Control" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_right = 576.0
margin_bottom = 1024.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu/VBoxContainer"]
margin_right = 576.0
margin_bottom = 510.0
size_flags_vertical = 3

[node name="Title" type="Label" parent="Menu/VBoxContainer/CenterContainer"]
margin_left = 15.0
margin_top = 133.0
margin_right = 560.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 2 )
text = "Bouncing
Shibastronaut"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="Menu/VBoxContainer"]
margin_top = 514.0
margin_right = 576.0
margin_bottom = 1024.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/VBoxContainer/CenterContainer2"]
margin_left = 80.0
margin_top = 125.0
margin_right = 495.0
margin_bottom = 385.0
custom_constants/separation = 20

[node name="Start" type="Button" parent="Menu/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 415.02
margin_bottom = 100.0
custom_fonts/font = ExtResource( 3 )
text = "Start"

[node name="Continue" type="Button" parent="Menu/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 120.0
margin_right = 415.0
margin_bottom = 180.0
text = "Continue"

[node name="Credits" type="Button" parent="Menu/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 200.0
margin_right = 415.0
margin_bottom = 260.0
text = "Credits"
[connection signal="pressed" from="Credits/VBoxContainer/CenterContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/CenterContainer2/VBoxContainer/Start" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/CenterContainer2/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/CenterContainer2/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
